<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="ok">Ok</string>
	<string name="updating_forecasts">Updating forecasts</string>
	<string name="update_forecasts">Update forecasts</string>
	<string name="delete_place">Do you want to delete this place?</string>
	<string name="current_location">Current location</string>
	<string name="km_from_">"km from "</string>
	<string name="app_name">Firestorm</string>
	<string name="please_wait_1min">Please wait while downloading forecast, this can
		take up to a minute.</string>
	<string name="no_internet_connection">Could not connect to internett, please make sure
		that you have connection. Try again?"</string>
	<string name="unknown_error_while_downloading">Something went wrong during downloading of the
		forecast. Try
		again?</string>
	<string name="no_position">Can not find your position. Try again?</string>
	<string name="no_wifi_connection">"Could not connect to internett via Wifi(Uncheck\"Wifi only\" option in settings if you want to download forecast also when Wifi is not available). Try again?"</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="Place">Place:</string>
	<string name="Downloaded">Downloaded:</string>
	<string name="Generated">Generated:</string>
	<string name="Next_update">Next update:</string>
	<string name="Provider">Data from The Norwegian Meteorological Institute
	</string>
	<string name="Places">Places:</string>
	<string name="Add_place">Add a place</string>
	<string name="getting_information">Getting information, please wait.</string>
	<string name="Place_name">Place name</string>
	<string name="add_this_position">Get current position</string>
	<string name="get_position_from_map">Get position from map</string>
	<string name="Longitude:">Longitude:</string>
	<string name="Latitude:">Latitude:</string>
	<string name="Altitude:">Altitude:</string>
	<string name="Degree_hint">dd.dd°</string>
	<string name="Altitude_hint">Altitude in meter</string>
	<string name="add_place">Add place</string>
	<string name="GetPositionMapHint">Press long on the place you want to add.</string>
	<string name="Add_place_required_format">Altitude, latitude and longitude must be a decimal
		number (x.x)</string>
	<string name="Add_place_required_fields">All fields must be filled in.</string>
	<string name="no_forecast">The forecast is not downloaded for this place. This
		can happen after a place is added and a forecast is not yet
		downloaded
		or for places outside Norway.</string>
	<string name="only_download_forecast_on_wifi">Wifi only</string>
	<string name="only_download_forecast_on_wifi_summary">Only download forecasts on wifi. Each forecast is
		about 150 kB, it is therefore
		recommended to only download forecast on
		wifi.</string>
	<string name="Settings">Settings</string>
	<string name="Downloaded_forecasts">Downloaded forecasts</string>
	<string name="time">Time</string>
	<string name="forecast">Forecast</string>
	<string name="temperature">Tempe-\nrature</string>
	<string name="degreeCelius">°C</string>
	<string name="millimeter">mm</string>
	<string name="meterperseconds">m/s</string>
	<string name="degree">deg.</string>
	<string name="percipitation">Percipi-\ntation</string>
	<string name="wind">Wind\nspeed</string>
	<string name="windDirection">Wind\ndirection</string>
	<string name="cloudCoverage">Cloud\ncover</string>
	<string name="humidity">Humi-\ndity</string>
	<string name="pressure">Pres-\nsure</string>
	<string name="hPa">hPa</string>
	<string name="percent">%</string>
	<string name="please_wait">Please wait.</string>
</resources>
