<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:orientation="vertical"
	android:layout_height="wrap_content">
	<TableLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:stretchColumns="0">
		<TableRow>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/Place" />
			<TextView android:gravity="right" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/place" />
		</TableRow>
		<TableRow>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/Generated" />
			<TextView android:gravity="right" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/generated" />
		</TableRow>
		<TableRow>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/Downloaded" />
			<TextView android:gravity="right" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/downloaded" />
		</TableRow>
		<TableRow>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/Next_update" />
			<TextView android:gravity="right" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/next_update" />
		</TableRow>
	</TableLayout>
	<TextView layout_span="2" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/Provider" />
</LinearLayout>
