<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:padding="3dip">
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/Places" />
	<ListView android:id="@+id/android:list" android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	<TextView android:id="@+id/android:empty"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:text="@string/getting_information" />
	<Button android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/Add_place"
		android:id="@+id/add_place" />
</LinearLayout>
